TrailORG/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Explorer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Explorer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Adventure Package</relationshipLabel>
        <relationshipName>Adventure_Package</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FulfillmentId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>FulfillmentId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fulfillment_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fulfillment Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fulfillment_State__c</fullName>
        <label>Fulfillment State</label>
        <picklist>
            <picklistValues>
                <fullName>Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Created</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Needs_Insurance__c</fullName>
        <formula>PricebookEntry.Product2.Needs_Insurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Needs Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Waiver__c</fullName>
        <formula>PricebookEntry.Product2.Needs_Waiver__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Needs Waiver</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>